--- a/python-statistika/entry.yml
+++ b/python-statistika/entry.yml
@@ -2,4 +2,7 @@ title: Úvod do statistiky v Pythonu
 lead: Vysvětlíme si základy statistiky a ukážeme si, jak vše spočítat a zjistit v Pythonu
 lessons:
   - instalace
+  - hypotezy
+  - excs
+  - kvantily-hustota
   
